# deadsync

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README.md  TRANSLATION_STATUS.md  build.rs  extract_helper.py  flake.nix  plan.md  rust-performance.md
crates/deadlib-assets/: Cargo.toml
crates/deadlib-assets/benches/: dynamic_path_classification.rs  graphic_discovery_sort.rs  raw_banner_cache_load.rs  texture_upload_queue.rs
crates/deadlib-assets/src/: asset_store.rs  builtin.rs  context.rs  decode.rs  discover.rs  dynamic.rs  error.rs  font.rs  font_store.rs  lib.rs  present_dsl.rs  registry.rs  texture_store.rs  upload.rs
crates/deadlib-platform/: Cargo.toml
crates/deadlib-platform/src/: coalesced_write.rs  console.rs  dirs.rs  display.rs  idle_inhibit.rs  lib.rs  lock_wait.rs  windows_rt.rs
crates/deadlib-present/: Cargo.toml
crates/deadlib-present/benches/: actor_lifecycle.rs  compiled_scene.rs  font_import_candidates.rs  render_sort.rs  retained_skeleton.rs  text_layout_saturation.rs  text_page_ids.rs  textured_mesh_compose.rs
crates/deadlib-present/examples/: compiled_scene_bench.rs
crates/deadlib-present/src/: actors.rs  anim.rs  cache.rs  color.rs  compiled_scene.rs  compose.rs  density.rs  dsl.rs  font.rs  lib.rs  runtime.rs  space.rs  texture.rs
crates/deadlib-render/: Cargo.toml
crates/deadlib-render-backend-gl/: Cargo.toml
crates/deadlib-render-backend-gl/src/: lib.rs
crates/deadlib-render-backend-software/: Cargo.toml
crates/deadlib-render-backend-software/src/: lib.rs
crates/deadlib-render-backend-vulkan/: Cargo.toml
crates/deadlib-render-backend-vulkan/src/: lib.rs
crates/deadlib-render-backend-wgpu/: Cargo.toml
crates/deadlib-render-backend-wgpu/src/: lib.rs
crates/deadlib-render/benches/: draw_prep.rs
crates/deadlib-render/src/: draw_prep.rs  lib.rs
crates/deadlib-render/tests/: draw_frame.rs
crates/deadlib-renderer/: Cargo.toml
crates/deadlib-renderer/src/: lib.rs  window_size.rs
crates/deadlib-video/: Cargo.toml
crates/deadlib-video/benches/: frame_recycling.rs
crates/deadlib-video/src/: lib.rs
crates/deadsync-assets/: Cargo.toml
crates/deadsync-assets/benches/: dynamic_video_keys.rs
crates/deadsync-assets/src/: audio_folder.rs  dynamic_media.rs  i18n.rs  language.rs  lib.rs  manager.rs  media_cache.rs  present_dsl.rs  screenshot.rs  song_lua.rs  textures.rs  visual_styles.rs
crates/deadsync-audio/: Cargo.toml
crates/deadsync-audio-analysis/: Cargo.toml
crates/deadsync-audio-analysis/src/: cache.rs  lib.rs
crates/deadsync-audio-backend-native/: Cargo.toml  build.rs
crates/deadsync-audio-backend-native/src/: freebsd_pcm.rs  launch.rs  lib.rs  linux_alsa.rs  linux_jack.rs  linux_pipewire.rs  linux_pulse.rs  macos_coreaudio.rs  telemetry.rs  windows_wasapi.rs
crates/deadsync-audio-decode/: Cargo.toml
crates/deadsync-audio-decode/benches/: planar_accum_push.rs  seek_tail_reuse.rs
crates/deadsync-audio-decode/src/: flac.rs  folder.rs  lib.rs  mp3.rs  ogg_vorbis.rs  opus.rs  resample.rs  wav.rs
crates/deadsync-audio-stream/: Cargo.toml
crates/deadsync-audio-stream/src/: clock.rs  lib.rs  music_map.rs  runtime.rs  sfx_cache.rs  stream_runtime.rs  stretch.rs
crates/deadsync-audio/benches/: audio_blocks.rs
crates/deadsync-audio/src/: lib.rs  mixer.rs  output.rs  position.rs  render.rs  ring.rs  telemetry.rs
crates/deadsync-chart/: Cargo.toml
crates/deadsync-chart/benches/: background_video_extension.rs  no_cmod_title.rs
crates/deadsync-chart/src/: background.rs  chart.rs  lib.rs  notes.rs  song.rs
crates/deadsync-config/: Cargo.toml
crates/deadsync-config/src/: app_config.rs  app_update.rs  audio.rs  backfill.rs  bools.rs  cache.rs  defaults.rs  folders.rs  frame_pacing.rs  ini.rs  keybinds.rs  lib.rs  load.rs  machine.rs  navigation.rs  null_or_die.rs  numbers.rs  options.rs  pad_order.rs  prelude.rs  runtime.rs  runtime_load.rs  runtime_state.rs  runtime_update.rs  save.rs  theme.rs  update.rs  writer.rs
crates/deadsync-gameplay/: Cargo.toml
crates/deadsync-gameplay/benches/: mines_insert.rs  song_lua_messages.rs  timing_cache.rs  transformed_chart_totals.rs
crates/deadsync-gameplay/src/: attacks.rs  autosync.rs  chart_transforms.rs  controls.rs  course_display.rs  cues.rs  density_graph.rs  display_clock.rs  effective.rs  error_bar.rs  feedback.rs  holds.rs  input_slots.rs  input_state.rs  judgment_input.rs  lib.rs  life.rs  mines.rs  mod_effects.rs  note_timing.rs  player.rs  profile_session.rs  raw_keys.rs  replay.rs  rows.rs  runtime_config.rs  runtime_init.rs  runtime_methods.rs  runtime_regression_tests.rs  runtime_state.rs  runtime_update.rs  score_display.rs  score_validity.rs  song_lua_windows.rs  tests.rs  trace.rs  viewport.rs
crates/deadsync-heart-rate/: Cargo.toml
crates/deadsync-heart-rate/src/: lib.rs  platform.rs
crates/deadsync-hot/: Cargo.toml
crates/deadsync-hot/src/: lib.rs
crates/deadsync-import/: Cargo.toml
crates/deadsync-import/benches/: chart_resolver.rs  song_dir_normalization.rs
crates/deadsync-import/src/: app_runtime.rs  detect.rs  ini.rs  itg.rs  lib.rs  options.rs  pipeline.rs  pipeline_tests.rs  resolver.rs  xml.rs
crates/deadsync-input-fsr/: Cargo.toml
crates/deadsync-input-fsr/src/: fsrio.rs  lib.rs  mock.rs  smx.rs
crates/deadsync-input-native/: Cargo.toml
crates/deadsync-input-native/src/: backend.rs  launch.rs  lib.rs  pad_order.rs
crates/deadsync-lights/: Cargo.toml
crates/deadsync-lights/src/: cabinet_chart.rs  gameplay.rs  lib.rs  litboard.rs  minimaid_hid.rs
crates/deadsync-net/: Cargo.toml
crates/deadsync-net/src/: lib.rs
crates/deadsync-notefield/: Cargo.toml
crates/deadsync-notefield/benches/: hold_mesh.rs  placement_plan.rs  slot_frame_cache.rs
crates/deadsync-notefield/src/: actor_builder.rs  combo_feedback.rs  compose.rs  display_mods.rs  error_bar.rs  explosions.rs  feedback.rs  field_frame.rs  frame_feedback.rs  frame_hud.rs  holds.rs  hud.rs  judgment_feedback.rs  lib.rs  measure_actors.rs  notes.rs  (+9 more)
crates/deadsync-noteskin/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
(+1172 files in other folders)
