[package]
name = "deadsync"
version = "0.4.656"
authors = ["Patrik Nilsson <perfecttaste@pm.me>"]
edition = "2024"
description = "A competitive SM/ITG engine focused on perfect sync and performance."
license = "GPL-3.0"
repository = "https://github.com/pnn64/deadsync"
keywords = ["deadsync", "stepmania", "itg", "inthegroove", "rhythmgame", "vulkan"]

[workspace]
members = [
    ".",
    "crates/deadsync-audio-analysis",
    "crates/deadsync-audio-decode",
    "crates/deadsync-chart",
    "crates/deadsync-core",
    "crates/deadsync-input",
    "crates/deadsync-input-native",
    "crates/deadsync-net",
    "crates/deadsync-online",
    "crates/deadsync-platform",
    "crates/deadsync-present",
    "crates/deadsync-profile",
    "crates/deadsync-render",
    "crates/deadsync-render-backend-gl",
    "crates/deadsync-render-backend-software",
    "crates/deadsync-render-backend-vulkan",
    "crates/deadsync-render-backend-wgpu",
    "crates/deadsync-rules",
    "crates/deadsync-score",
    "crates/deadsync-simfile",
    "crates/deadsync-video",
]
resolver = "3"

[[bin]]
name = "compose_bench"
path = "tests/compose/bench.rs"

[[bin]]
name = "draw_bench"
path = "tests/draw/bench.rs"

[[bin]]
name = "input_bench"
path = "tests/input/bench.rs"

[[bin]]
name = "input_e2e_bench"
path = "tests/input_e2e/bench.rs"

[[bin]]
name = "lang_coverage"
path = "scripts/lang_coverage.rs"

[[bin]]
name = "generate_pseudo"
path = "scripts/generate_pseudo.rs"

[[bin]]
name = "replaygain_bench"
path = "scripts/replaygain_bench.rs"


[features]
pipewire-audio = ["dep:pipewire"]

[dependencies]
deadsync-audio-analysis = { path = "crates/deadsync-audio-analysis" }
deadsync-audio-decode = { path = "crates/deadsync-audio-decode" }
deadsync-chart = { path = "crates/deadsync-chart" }
deadsync-core = { path = "crates/deadsync-core" }
deadsync-input = { path = "crates/deadsync-input" }
deadsync-input-native = { path = "crates/deadsync-input-native" }
deadsync-net = { path = "crates/deadsync-net" }
deadsync-online = { path = "crates/deadsync-online" }
deadsync-platform = { path = "crates/deadsync-platform" }
deadsync-present = { path = "crates/deadsync-present" }
deadsync-profile = { path = "crates/deadsync-profile" }
deadsync-render = { path = "crates/deadsync-render" }
deadsync-render-backend-gl = { path = "crates/deadsync-render-backend-gl" }
deadsync-render-backend-software = { path = "crates/deadsync-render-backend-software" }
deadsync-render-backend-wgpu = { path = "crates/deadsync-render-backend-wgpu" }
deadsync-rules = { path = "crates/deadsync-rules" }
deadsync-score = { path = "crates/deadsync-score" }
deadsync-simfile = { path = "crates/deadsync-simfile" }
deadsync-video = { path = "crates/deadsync-video" }
winit = "0.30.13"
log = "0.4.32"
image = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rand = "0.10.1"
chrono = "0.4.45"
qrcodegen = "1.8.0"
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
rustc-hash = "2.1.2"
smallvec = "1.15.1"

# rssp and null-or-die
rssp = { git = "https://github.com/pnn64/rssp", branch = "main" }
null-or-die = { git = "https://github.com/pnn64/null-or-die", branch = "main" }

# StepManiaX pad SDK
rustmaniax-sdk = "1.1.3"

# Math
glam = "0.33.1"
bytemuck = { version = "1.25.0", features = ["derive"] }

pollster = "0.4.0"

# Audio
rubato = "0.16.2"

# Networking
ureq = { version = "3.3.0", features = ["json", "rustls"] }
tungstenite = "0.29.0"

# Unlocks
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
sha2 = "0.11.0"
tar = { version = "0.4.46", default-features = false }
flate2 = "1.1.9"

# Song cache
bincode = "2.0.1"
twox-hash = "2.1.2"

# Localization
rust-ini = "0.21.3"
sys-locale = "0.3.2"
semver = "1.0.28"
tokio = { version = "1.52.3", features = ["rt"] }
bitflags = "2.13.0"

# DirectX + Input (Windows)
[target.'cfg(windows)'.dependencies]
gpu-allocator = { version = "0.28.0", default-features = false, features = ["std", "d3d12"] }
hidapi = { version = "2.6.6", default-features = false, features = ["windows-native"] }
windows-core = "0.62.2"
windows-targets = "0.53.5"
windows-sys = { version = "0.61.2", features = [
    "Win32_Devices_Communication",
    "Win32_Foundation",
] }

[target.'cfg(all(windows, target_vendor = "win7"))'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Graphics_Gdi",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Devices_Display",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Performance",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Variant",
    "Win32_Storage_FileSystem",
] }

[target.'cfg(all(windows, not(target_vendor = "win7")))'.dependencies]
windows = { version = "0.62.2", features = [
    "Foundation",
    "Foundation_Collections",
    "Gaming",
    "Gaming_Input",
    "Win32_Foundation",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Graphics_Gdi",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Devices_Display",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Performance",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_Storage_FileSystem",
] }

[target.'cfg(all(not(target_pointer_width = "32"), not(target_vendor = "win7")))'.dependencies]
deadsync-render-backend-vulkan = { path = "crates/deadsync-render-backend-vulkan" }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
libc = "0.2.186"
xcb = { version = "1.7.0", features = ["dpms", "randr", "screensaver"] }
smithay-client-toolkit = { version = "0.20.0", default-features = false }

[target.'cfg(target_os = "freebsd")'.dependencies]
hidparser = "1.0.3"
hidapi = { version = "2.6.6", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.11.0"
hidapi = { version = "2.6.6", default-features = false, features = ["linux-static-hidraw"] }
libloading = "0.9.0"
pipewire = { version = "0.9.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio = { package = "coreaudio-rs", version = "0.14.2" }
hidapi = { version = "2.6.6", default-features = false }
libc = "0.2.186"
mach2 = "0.6.0"
objc2 = { version = "0.6.4", features = ["relax-sign-encoding"] }
objc2-app-kit = "0.3.2"
objc2-core-audio = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-foundation = "0.3.2"

[patch.crates-io]
# hidapi's windows-native backend imports GetOverlappedResultEx, which is
# unavailable on Windows 7. The local patch keeps the same backend but uses the
# Win7-compatible overlapped wait sequence.
hidapi = { path = "vendor/hidapi-win7" }
dirs-sys = { path = "vendor/dirs-sys-win7" }

[build-dependencies]
fs_extra = "1.3.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
lto = true
debug = false
panic = "abort"

[profile.local]
inherits = "release"
lto = "thin"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
