[package]
name = "deadsync"
version.workspace = true
authors = ["Patrik Nilsson <perfecttaste@pm.me>"]
edition = "2024"
description = "A competitive SM/ITG engine focused on perfect sync and performance."
license = "GPL-3.0"
repository = "https://github.com/pnn64/deadsync"
keywords = ["deadsync", "stepmania", "itg", "inthegroove", "rhythmgame", "vulkan"]

[workspace]
members = [
    ".",
    "crates/deadsync-audio",
    "crates/deadsync-audio-analysis",
    "crates/deadsync-audio-backend-native",
    "crates/deadsync-audio-decode",
    "crates/deadsync-audio-replaygain",
    "crates/deadsync-audio-stream",
    "crates/deadsync-chart",
    "crates/deadsync-config",
    "crates/deadsync-core",
    "crates/deadsync-gameplay",
    "crates/deadsync-heart-rate",
    "crates/deadsync-import",
    "crates/deadsync-input",
    "crates/deadsync-input-fsr",
    "crates/deadsync-input-native",
    "crates/deadsync-assets",
    "crates/deadsync-lights",
    "crates/deadsync-net",
    "crates/deadsync-notefield",
    "crates/deadsync-noteskin",
    "crates/deadsync-online",
    "crates/deadlib-assets",
    "crates/deadlib-platform",
    "crates/deadlib-present",
    "crates/deadsync-profile",
    "crates/deadsync-profile-gameplay",
    "crates/deadlib-render",
    "crates/deadlib-render-backend-gl",
    "crates/deadlib-render-backend-software",
    "crates/deadlib-render-backend-vulkan",
    "crates/deadlib-render-backend-wgpu",
    "crates/deadlib-renderer",
    "crates/deadsync-rules",
    "crates/deadsync-score",
    "crates/deadsync-shell",
    "crates/deadsync-simfile",
    "crates/deadsync-song-lua",
    "crates/deadsync-smx",
    "crates/deadsync-theme",
    "crates/deadsync-theme-simply-love",
    "crates/deadsync-updater",
    "crates/deadsync-version",
    "crates/deadlib-video",
]
resolver = "3"

# Single source of truth for the application version. The root `deadsync`
# binary and the `deadsync-version` crate both inherit this via
# `version.workspace = true`, so `env!("CARGO_PKG_VERSION")` and
# `deadsync_version::current()` always agree. Bump THIS line on release.
[workspace.package]
version = "0.4.2643"

[[bin]]
name = "generate_pseudo"
path = "scripts/generate_pseudo.rs"

[[bin]]
name = "replaygain_bench"
path = "scripts/replaygain_bench.rs"


[features]
pipewire-audio = ["deadsync-audio-backend-native/pipewire-audio"]

[dependencies]
deadlib-platform = { path = "crates/deadlib-platform" }
deadsync-audio-analysis = { path = "crates/deadsync-audio-analysis" }
deadsync-audio-backend-native = { path = "crates/deadsync-audio-backend-native", optional = true }
deadsync-audio-replaygain = { path = "crates/deadsync-audio-replaygain" }
deadsync-audio-stream = { path = "crates/deadsync-audio-stream" }
deadsync-config = { path = "crates/deadsync-config" }
deadsync-profile = { path = "crates/deadsync-profile" }
deadsync-shell = { path = "crates/deadsync-shell" }
deadsync-theme-simply-love = { path = "crates/deadsync-theme-simply-love" }
deadsync-updater = { path = "crates/deadsync-updater" }
deadsync-version = { path = "crates/deadsync-version" }
log = "0.4.33"

[dev-dependencies]
deadlib-present = { path = "crates/deadlib-present" }
deadsync-assets = { path = "crates/deadsync-assets" }
deadsync-chart = { path = "crates/deadsync-chart" }
deadsync-core = { path = "crates/deadsync-core" }
deadsync-rules = { path = "crates/deadsync-rules" }
deadsync-score = { path = "crates/deadsync-score" }
deadsync-simfile = { path = "crates/deadsync-simfile" }

[patch.crates-io]
# hidapi's windows-native backend imports GetOverlappedResultEx, which is
# unavailable on Windows 7. The local patch keeps the same backend but uses the
# Win7-compatible overlapped wait sequence.
hidapi = { path = "vendor/hidapi-win7" }
dirs-sys = { path = "vendor/dirs-sys-win7" }
# rfd's Windows backend imports CoTaskMemFree from combase.dll through
# windows-sys 0.61. Windows 7 only provides that API from ole32.dll, so the
# local patch resolves it at runtime.
rfd = { path = "vendor/rfd-win7" }

[build-dependencies]
fs_extra = "1.3.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
lto = true
debug = false
panic = "abort"

[profile.local]
inherits = "release"
lto = "thin"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
