[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false
description = "deadsync developer task runner (cross-platform hot-reload watcher, etc.)"

[[bin]]
name = "xtask"
path = "src/main.rs"

# Intentionally dependency-free: pure std so `cargo xtask` builds in a fraction of
# a second and never drags in the engine's (very large) dependency graph.
[dependencies]
