[package]
name = "deadlib-platform"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
chrono = "0.4.45"
directories = "6.0.0"
env_logger = "0.11.11"
log = "0.4.33"
winit = "0.30.13"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Performance",
    "Win32_System_Threading",
] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
smithay-client-toolkit = { version = "0.20.0", default-features = false }
xcb = { version = "1.7.0", features = ["dpms", "randr", "screensaver"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4", features = ["relax-sign-encoding"] }
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-foundation = "0.3.2"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
