[package]
name = "deadlib-present"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[features]
bench-support = []

[[bench]]
name = "actor_lifecycle"
harness = false
required-features = ["bench-support"]

[[bench]]
name = "text_layout_saturation"
harness = false
required-features = ["bench-support"]

[[bench]]
name = "text_page_ids"
harness = false
required-features = ["bench-support"]

[[bench]]
name = "retained_skeleton"
harness = false
required-features = ["bench-support"]

[[bench]]
name = "render_sort"
harness = false
required-features = ["bench-support"]

[dependencies]
deadlib-render = { path = "../deadlib-render" }
glam = "0.33.2"
image = "0.25.10"
log = "0.4.33"
smallvec = "1.15.2"
rustc-hash = "2.1.3"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
