[package]
name = "deadlib-render-backend-gl"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
deadlib-render = { path = "../deadlib-render" }
glam = "0.33.1"
glow = "0.17.0"
glutin = "0.32.3"
image = "0.25.10"
log = "0.4.33"
raw-window-handle = "0.6.2"
winit = "0.30.13"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4", features = ["relax-sign-encoding"] }
objc2-app-kit = "0.3.2"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
