[package]
name = "deadlib-render-backend-vulkan"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
deadlib-platform = { path = "../deadlib-platform" }
deadlib-render = { path = "../deadlib-render" }
glam = "0.33.1"
image = "0.25.10"
log = "0.4.32"
winit = "0.30.13"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Performance"] }

[build-dependencies]
shaderc = "0.10.1"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
