[package]
name = "deadlib-render-backend-wgpu"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
bytemuck = { version = "1.25.1", features = ["derive"] }
deadlib-platform = { path = "../deadlib-platform" }
deadlib-render = { path = "../deadlib-render" }
glam = "0.33.2"
image = "0.25.10"
log = "0.4.33"
pollster = "1.0.1"
raw-window-handle = "0.6.2"
winit = "0.30.13"

[target.'cfg(all(not(target_pointer_width = "32"), target_os = "windows", target_vendor = "win7"))'.dependencies]
wgpu = { version = "30.0.0", default-features = false, features = ["std", "parking_lot", "wgsl", "dx12", "gles"] }

[target.'cfg(all(not(target_pointer_width = "32"), target_os = "windows", not(target_vendor = "win7")))'.dependencies]
wgpu = { version = "30.0.0", default-features = false, features = ["std", "parking_lot", "wgsl", "dx12", "vulkan", "gles"] }

[target.'cfg(all(not(target_pointer_width = "32"), target_os = "macos"))'.dependencies]
wgpu = { version = "30.0.0", default-features = false, features = ["std", "parking_lot", "wgsl", "metal", "vulkan", "gles"] }

[target.'cfg(all(not(target_pointer_width = "32"), not(any(target_os = "windows", target_os = "macos"))))'.dependencies]
wgpu = { version = "30.0.0", default-features = false, features = ["std", "parking_lot", "wgsl", "vulkan", "gles"] }

[target.'cfg(all(target_pointer_width = "32", target_os = "windows"))'.dependencies]
wgpu = { version = "30.0.0", default-features = false, features = ["std", "parking_lot", "wgsl", "dx12", "gles"] }

[target.'cfg(all(target_pointer_width = "32", not(target_os = "windows")))'.dependencies]
wgpu = { version = "30.0.0", default-features = false, features = ["std", "parking_lot", "wgsl", "gles"] }

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
