[package]
name = "deadlib-render"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = "0.33.1"
serde = { version = "1.0.228", features = ["derive"] }
twox-hash = "2.1.2"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
