[package]
name = "deadlib-render"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[[bench]]
name = "draw_prep"
harness = false

[dependencies]
bytemuck = { version = "1.25.2", features = ["derive"] }
glam = "0.33.2"
rustc-hash = "2.1.3"
serde = { version = "1.0.229", features = ["derive"] }

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
