[package]
name = "deadlib-video"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
image = "0.25.10"
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[[bench]]
name = "frame_recycling"
harness = false

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
