[package]
name = "deadsync-assets"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
deadlib-assets = { path = "../deadlib-assets" }
deadlib-platform = { path = "../deadlib-platform" }
deadlib-present = { path = "../deadlib-present" }
deadlib-render = { path = "../deadlib-render" }
deadlib-renderer = { path = "../deadlib-renderer" }
deadsync-audio-decode = { path = "../deadsync-audio-decode" }
deadsync-audio-stream = { path = "../deadsync-audio-stream" }
deadsync-config = { path = "../deadsync-config" }
deadsync-noteskin = { path = "../deadsync-noteskin" }
deadsync-song-lua = { path = "../deadsync-song-lua" }
deadsync-theme = { path = "../deadsync-theme" }
image = "0.25.10"
log = "0.4.33"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
