[package]
name = "deadsync-assets"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[features]
bench-support = []

[[bench]]
name = "dynamic_video_keys"
harness = false
required-features = ["bench-support"]

[dependencies]
deadlib-assets = { path = "../deadlib-assets" }
deadlib-platform = { path = "../deadlib-platform" }
deadlib-present = { path = "../deadlib-present" }
deadlib-render = { path = "../deadlib-render" }
deadlib-renderer = { path = "../deadlib-renderer" }
deadlib-video = { path = "../deadlib-video" }
deadsync-audio-decode = { path = "../deadsync-audio-decode" }
deadsync-audio-stream = { path = "../deadsync-audio-stream" }
deadsync-chart = { path = "../deadsync-chart" }
deadsync-config = { path = "../deadsync-config" }
deadsync-noteskin = { path = "../deadsync-noteskin" }
deadsync-song-lua = { path = "../deadsync-song-lua" }
deadsync-theme = { path = "../deadsync-theme" }
chrono = "0.4.45"
image = "0.25.10"
log = "0.4.33"
rustc-hash = "2.1.3"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
