[package]
name = "deadsync-audio-analysis"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
bincode = "2.0.1"
deadsync-audio-decode = { path = "../deadsync-audio-decode" }
ebur128 = "0.1.10"
twox-hash = "2.1.3"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
