[package]
name = "deadsync-audio-backend-native"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
deadsync-audio = { path = "../deadsync-audio" }
deadsync-platform = { path = "../deadsync-platform" }
log = "0.4.32"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
