[package]
name = "deadsync-audio-backend-native"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
deadsync-audio = { path = "../deadsync-audio" }
deadlib-platform = { path = "../deadlib-platform" }
log = "0.4.33"

[features]
pipewire-audio = ["dep:pipewire"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
] }

[target.'cfg(target_os = "freebsd")'.dependencies]
libc = "0.2.186"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.11.0"
libc = "0.2.186"
libloading = "0.9.0"
pipewire = { version = "0.9.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio = { package = "coreaudio-rs", version = "0.14.2" }
mach2 = "0.6.0"
objc2-core-audio = "0.3.2"
objc2-core-foundation = "0.3.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(has_jack_audio)",
    "cfg(has_pipewire_audio)",
    "cfg(has_pulse_audio)",
] }

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
