[package]
name = "deadsync-audio-decode"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[features]
bench-support = []

[[bench]]
name = "seek_tail_reuse"
harness = false
required-features = ["bench-support"]

[[bench]]
name = "planar_accum_push"
harness = false
required-features = ["bench-support"]

[dependencies]
ogg = "0.9.2"
opusic-c = "1.6.1"
rubato = "0.16.2"
symphonia = { version = "0.6.0", default-features = false, features = ["ogg", "vorbis", "mp3", "flac"] }

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
