[package]
name = "deadsync-audio-stream"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[features]
test-support = []

[dependencies]
deadsync-audio = { path = "../deadsync-audio" }
deadsync-audio-backend-native = { path = "../deadsync-audio-backend-native" }
deadsync-audio-decode = { path = "../deadsync-audio-decode" }
deadsync-audio-replaygain = { path = "../deadsync-audio-replaygain" }
deadlib-platform = { path = "../deadlib-platform" }
log = "0.4.33"
rubato = "0.16.2"
smallvec = "1.15.2"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
