[package]
name = "deadsync-chart"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
deadsync-rules = { path = "../deadsync-rules" }
rssp = { git = "https://github.com/pnn64/rssp", branch = "main" }

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
