[package]
name = "deadsync-chart"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[features]
bench-support = []

[[bench]]
name = "no_cmod_title"
harness = false
required-features = ["bench-support"]

[dependencies]
deadsync-core = { path = "../deadsync-core" }
deadsync-rules = { path = "../deadsync-rules" }

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
