[package]
name = "deadsync-config"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
deadlib-platform = { path = "../deadlib-platform" }
deadlib-present = { path = "../deadlib-present" }
deadlib-render = { path = "../deadlib-render" }
deadsync-audio = { path = "../deadsync-audio" }
deadsync-audio-stream = { path = "../deadsync-audio-stream" }
deadsync-chart = { path = "../deadsync-chart" }
deadsync-input = { path = "../deadsync-input" }
deadsync-input-native = { path = "../deadsync-input-native" }
deadsync-lights = { path = "../deadsync-lights" }
deadsync-smx = { path = "../deadsync-smx" }
log = "0.4.33"
null-or-die = { git = "https://github.com/pnn64/null-or-die", branch = "main" }
winit = "0.30.13"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
