[package]
name = "deadsync-gameplay"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
deadsync-chart = { path = "../deadsync-chart" }
deadsync-core = { path = "../deadsync-core" }
deadsync-rules = { path = "../deadsync-rules" }
twox-hash = "2.1.2"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
