[package]
name = "deadsync-gameplay"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
deadsync-chart = { path = "../deadsync-chart" }
deadsync-core = { path = "../deadsync-core" }
deadsync-input = { path = "../deadsync-input" }
deadsync-rules = { path = "../deadsync-rules" }
deadsync-simfile = { path = "../deadsync-simfile" }
deadsync-song-lua = { path = "../deadsync-song-lua" }
rssp = { git = "https://github.com/pnn64/rssp", branch = "main" }
log = "0.4.33"
twox-hash = "2.1.2"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
